kubernetes-volumes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: practice2
  namespace: homework
  labels:
    app: nginx
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      nodeSelector: 
        homework: 'true'
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 8000
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8000
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        volumeMounts:
        - name: workdir
          mountPath: /homework
        - name: config
          mountPath: /etc/nginx/conf.d/
        - name: homework-cm
          mountPath: /homework/conf/
        lifecycle:
          preStop:
              exec:
                command: ['/bin/sh','-c','rm -f /homework/index.html']
      volumes:
      - name: workdir
        persistentVolumeClaim:
          claimName: pvc-default-cs
      - name: config
        configMap:
          name: cm-practice2
      - name: homework-cm
        configMap:
          name: cm-homeworkdir
