kubernetes-volumes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: practice3
  namespace: homework
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: nginx
  type: ClusterIP
